<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:orientation="vertical"
    android:padding="25dp"
    tools:context=".ResultActivity">
    <androidx.cardview.widget.CardView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="5dp"
        app:cardBackgroundColor="@color/cardview_light_background"
        app:contentPadding="20dp"
        app:cardCornerRadius="15dp">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:gravity="center"
            android:padding="25dp">
            <TextView
                android:id="@+id/result_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:textAlignment="center"
                android:text="@string/result"
                android:textColor="@color/NBA_Blue"
                android:textSize="20sp" />
            <TextView
                android:id="@+id/score_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:textAlignment="center"
                android:text="@string/score"
                android:textColor="@color/colorPrimaryDark"
                android:textSize="18sp" />
            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/restart_button"
                android:onClick="restart"/>
        </LinearLayout>
    </androidx.cardview.widget.CardView>
</LinearLayout>